--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <h2>Зал 2</h2>
   <div id="schedule-container-2"></div>
 
-  <script src="script.js"></script>
+  <script type="module" src="script.js"></script>
+
 </body>
 </html>
