--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
   <div id="schedule-container-2"></div>
 
   <script src="mandatory.js"></script>
-  <script type="module" src="script.js"></script>
+  <script type="module" src="script.js?v=1.2"></script>
 </body>
 </html>
