--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Расписание</title>
-	<link rel="icon" href="/favicon.png">
-    <link rel="stylesheet" href="/style.css">
+	<link rel="icon" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
     <meta name="theme-color" content="#0a0f1f">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
@@ -33,3 +33,4 @@
     <script type="module" src="script.js?v=1.3"></script>
 </body>
 </html>
+
