--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Расписание</title>
-	<link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="style.css">
-    <meta name="theme-color" content="#0a0f1f">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" href="img/favicon.png">
+    <link rel="apple-touch-icon" href="img/apple-icon.png">
+    <meta name="theme-color" content="#9526c0">
+    <title>FREE MOTION - Расписание</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <script>
@@ -19,16 +23,45 @@
             messagingSenderId: "497955603175",
             appId: "1:497955603175:web:54c6ce88d62b3072a6d842"
         };
-    firebase.initializeApp(firebaseConfig);
+        firebase.initializeApp(firebaseConfig);
     </script>
 </head>
+
+
 <body>
-    <h1>Расписание</h1>
-    <h2>Зал 1</h2>
-    <div id="schedule-container-1"></div>
-    <h2>Зал 2</h2>
-    <div id="schedule-container-2"></div>
+
+    <header>
+        <div class="header">
+            <div class="brand">
+                <img src="img/logo.png" alt="logo">
+                <div class="titles">
+                    <p class="title">FREE MOTION</p>
+                    <p class="subtitle">Расписание</p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main>
+        <div class="calendar">
+            <p>Зал 1</p>
+            <div id="schedule-container-1"></div>
+        </div>
+        <div class="calendar">
+            <p>Зал 2</p>
+            <div id="schedule-container-2"></div>
+        </div>
+    </main>
+
+    <footer>
+        <div class="footer">
+            <p>Абонементы 2025 - 2026</p>
+        </div>
+    </footer>
+
     <script src="mandatory.js"></script>
-    <script type="module" src="script.js?v=1.3"></script>
+    <script type="module" src="script.js?v=1.4"></script>
+
 </body>
+
 </html>
